<resources>
    <string name="app_name">校麦</string>
    <string name="now_loading">正在加载</string>
    <string name="app_home_title">校麦-连接校园生活</string>
    <string name="bindAccount">用户绑定</string>
    <string name="userRegister">用户注册</string>
    <string name="easyUse">注册试用</string>
    <string name="accountRecharge">账户充值</string>
    <string name="setMealModify">更换套餐</string>
    <string name="balanceQuery">免费使用</string>
    <string name="netDiagnosis">网络诊断</string>
    <string name="aboutPassword">关于密码</string>
    <string name="artificialService">人工客服</string>
    <string name="onekeyAuthentication">一键认证</string>
    <string name="exitAuthentication">退出认证</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="createAccount">创建账号</string>
    <string name="or">OR</string>
    <string name="wxAccountLogin">微信账号登录</string>
    <string name="messageCenter">消息中心</string>
    <string name="onLineServiceChatRecord">查看与客服的沟通记录</string>
    <string name="onLineService">在线客服</string>
    <string name="activityMessage">活动消息</string>
    <string name="activityMessageTips">你的地球日优惠福利来了</string>
    <string name="serviceMessage">服务消息</string>
    <string name="serviceMessageTips">你有一张优惠卷到账了</string>
    <string name="systemMessage">系统消息</string>
    <string name="hotSchool">热门学校</string>
    <string name="cancel">取消</string>
    <string name="addFriend">添加好友</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="confirm">确认</string>
    <string name="userFeedback">用户反馈</string>
    <string name="importantRemind">重要提醒</string>
    <string name="modifyAccountTipsContent">您的套餐还未到期，更换套餐，套餐剩余时长及账户余额将被清零，且无法找回。</string>
    <string name="tips">提示</string>
    <string name="bindAccountSchoolTips">您账号注册的校区与选择的校区不一致，请统一您的注册及使用校区 。</string>
    <string name="login_other_device_remind">你的账号在其他设备登录。如非本人操作，则密码可能已泄露，建议前往修改密码。</string>
</resources>
