<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/idBindAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_home_bind_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/bindAccount"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_home_user_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/userRegister"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_account_recharge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/accountRecharge"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_home_bind_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/setMealModify"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/llQueryBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_balance_query" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/balanceQuery"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNetworkDiagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_net_diagnosis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/netDiagnosis"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_about_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/aboutPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@mipmap/icon_artificial_service" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:text="@string/artificialService"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>