<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/idToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/icon_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/messageCenter"
            android:textColor="@color/titleTextColor"
            android:textSize="@dimen/titleTextSize" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/line"
        style="@style/DividerLineTheme"
        android:layout_height="0.5dp"
        android:layout_gravity="bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idToolBar" />

    <FrameLayout
        android:id="@+id/idOnLineService"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:background="@mipmap/icon_online_service" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onLineService"
                android:textColor="@color/defaultTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/onLineServiceChatRecord"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/icon_right_arrow" />

        <View
            style="@style/DividerLineTheme"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idToolBar" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/idActivityMessage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idOnLineService">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:background="@mipmap/icon_online_service" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activityMessage"
                android:textColor="@color/defaultTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/activityMessageTips"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/icon_right_arrow" />

        <View
            style="@style/DividerLineTheme"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idToolBar" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/idServiceMessage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idActivityMessage">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:background="@mipmap/icon_online_service" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceMessage"
                android:textColor="@color/defaultTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/serviceMessageTips"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/icon_right_arrow" />

        <View
            style="@style/DividerLineTheme"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idToolBar" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/idSystemMessage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idServiceMessage">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:background="@mipmap/icon_online_service" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systemMessage"
                android:textColor="@color/defaultTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/serviceMessageTips"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/icon_right_arrow" />

        <View
            style="@style/DividerLineTheme"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idToolBar" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>