<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/idCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="18dp"
        android:background="@mipmap/icon_cancel"
        />
    <ImageView
        android:id="@+id/idLogoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:background="@mipmap/icon_login_logo"
        />
    <FrameLayout
        android:id="@+id/idInputPhoneParent"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/idLogoIv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/icon_login_phone"
            android:background="@null"
            android:drawablePadding="8dp"
            android:hint="请输入手机号"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/hintTextColor"
            />
        <View style="@style/DividerLineTheme"
            android:layout_gravity="bottom"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/idInputPassWordParent"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/idInputPhoneParent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/icon_login_password"
            android:background="@null"
            android:drawablePadding="8dp"
            android:hint="请输入登录密码"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/hintTextColor"
            />
        <View style="@style/DividerLineTheme"
            android:layout_gravity="bottom"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/idForgetPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/idInputPassWordParent"
        app:layout_constraintRight_toRightOf="@id/idInputPassWordParent"
        android:layout_marginTop="10dp"
        android:text="@string/forgetPassword"
        />

    <TextView
        android:id="@+id/idLoginTv"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_half_circle_rectangle"
        app:layout_constraintTop_toBottomOf="@id/idForgetPasswordTv"
        app:layout_constraintLeft_toLeftOf="@id/idInputPassWordParent"
        app:layout_constraintRight_toRightOf="@id/idInputPassWordParent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/idCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        app:layout_constraintLeft_toLeftOf="@id/idLoginTv"
        app:layout_constraintRight_toRightOf="@id/idLoginTv"
        app:layout_constraintTop_toBottomOf="@id/idLoginTv"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintLeft_toLeftOf="@id/idCreateAccount"
        app:layout_constraintRight_toRightOf="@id/idCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/idCreateAccount"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        />
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/idLoginTv"
        app:layout_constraintRight_toRightOf="@id/idLoginTv"
        android:background="@drawable/shape_half_circle_empty_rectangle"
        app:layout_constraintTop_toBottomOf="@id/or">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_login_wx"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wxAccountLogin"
            android:layout_gravity="center"
            android:textSize="16sp"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>