<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/statusbar_view_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/app_home_title"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/icon_home_top_bg"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/rlSelectSchool"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shape_home_school_select_bg">

                        <TextView
                            android:id="@+id/tvSchoolName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawableRight="@mipmap/icon_down_arrow"
                            android:drawablePadding="8dp"
                            android:text="请选择您的学校"
                            android:textColor="@color/defaultTextColor"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/idUserMessageTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:lineSpacingExtra="8dp"
                        android:textColor="@color/white" />
                </LinearLayout>


                <TextView
                    android:id="@+id/idConnectWifiBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_margin="8dp"
                    android:background="@mipmap/icon_connect_wifi_btn" />
            </androidx.cardview.widget.CardView>
            <!--垂直广告轮播-->
            <LinearLayout
                android:id="@+id/llNotifyParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:background="#fff2f2f2"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/icon_home_red_horn" />

                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="11"
                    android:inAnimation="@anim/anim_in"
                    android:outAnimation="@anim/anim_out">
                </ViewFlipper>
            </LinearLayout>

            <include layout="@layout/layout_home_center_grid" />

            <TextView
                android:id="@+id/tvVerify"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_half_circle_rectangle"
                android:gravity="center"
                android:text="@string/onekeyAuthentication"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvQuitVerify"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/shape_half_circle_empty_rectangle"
                android:gravity="center"
                android:text="@string/exitAuthentication"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/llWebParent"
                android:layout_width="0.1dp"
                android:layout_height="0.1dp"
                android:orientation="horizontal"
                android:layout_marginLeft="-10dp"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>